# create-avatar

./: .gitignore  Dockerfile  Procfile  nixpacks.toml  pyproject.toml  railway.json  roadmap.md
conversational/app/: index.html  server.py
data/: viseme_mappings.json
scripts/: add_blendshapes_to_avaturn.py  blender_assembly.py  blender_bake_texture.py  download_models.sh
src/create_avatar/: __init__.py  cli.py  config.py
src/create_avatar/phase1_preprocess/: face_detect.py  validators.py
src/create_avatar/phase2_reconstruct/: deca_wrapper.py  flame_model.py  mediapipe_fitting.py  parametric_presets.py
src/create_avatar/phase3_blendshapes/: arkit_names.py  blendshape_transfer.py  correspondence.py  deformation_transfer.py  synthetic_blendshapes.py  viseme_definitions.py  viseme_generator.py
src/create_avatar/phase4_texture/: inpainting.py  texture_generator.py  uv_projection.py
src/create_avatar/phase5_assembly/: bust_generator.py  mesh_merger.py
src/create_avatar/phase6_export/: validator.py
src/create_avatar/utils/: device.py  mesh_io.py
